# UAV_Hackathon_T3

./: .gitmodules  README.md
CodeGen/Rust2ROSRoboSim/: .gitignore  Cargo.toml
CodeGen/Rust2ROSRoboSim/examples/: ReverseCmd.rs  subscriber.rs
CodeGen/Rust2ROSRoboSim/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
CodeGen/Rust2ROSRoboSim/log/: latest_build
CodeGen/Rust2ROSRoboSim/src/: main.rs
CodeGen/rust/: Cargo.toml
CodeGen/rust/src/: main.rs
T3_ROS2_WS/src/control/: package.xml  setup.py
T3_ROS2_WS/src/control/control/: ReverseCmd.py  control.py
T3_ROS2_WS/src/interfaces/: CMakeLists.txt  package.xml
T3_ROS2_WS/src/interfaces/msg/: Commands.msg  Landing.msg  MoveIn.msg  OpticalFlow.msg  T.msg
T3_ROS2_WS/src/keyboard_teleop/: setup.cfg
T3_ROS2_WS/src/keyboard_teleop/keyboard_teleop/: keyboard_teleop_incremental.py  teleop.py
T3_ROS2_WS/src/my_obstacle_avoidance/: CMakeLists.txt  package.xml
T3_ROS2_WS/src/my_obstacle_avoidance/src/: publish_command_pub.cpp  vfh_avoidance.cpp
T3_ROS2_WS/src/px4_ros_com/: CMakeLists.txt
T3_ROS2_WS/src/px4_ros_com/launch/: teleop.yaml
T3_ROS2_WS/src/px4_ros_com/src/examples/mine/: drone.cpp  teleop.cpp  teleop.py
behaviour/: .project  README.md  ReverseCmd.rst  behaviour-model.dot  px4vision.pm  representations.aird
behaviour/OYDrone/: ReverseCmd.rst  representations.aird
