
[package]
name = "r2r"
version = "0.6.3"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
description = "Easy to use, runtime-agnostic, async rust bindings for ROS2."
license = "MIT AND Apache-2.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/sequenceplanner/r2r"
repository = "https://github.com/sequenceplanner/r2r"
documentation = "https://sequenceplanner.github.io/r2r/"

[lib]
doctest = false

[dependencies]
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
thiserror = "1.0.30"
lazy_static = "1.4.0"
r2r_common = { path = "r2r_common", version = "0.3.2" }
r2r_rcl = { path = "r2r_rcl", version = "0.3.2" }
r2r_msg_gen = { path = "r2r_msg_gen", version = "0.3.3" }
r2r_actions = { path = "r2r_actions", version = "0.3.2" }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
futures = "0.3.19"
log = "0.4"
simplelog = "0.11.2"
rand = "0.8.5"
clap = "3.2.8"
ctrlc = { version = "3.2.2", features = ["termination"] }
# this should be conditional on using matrices or not
nalgebra = { version = "0.31.2", features = ["serde-serialize"] }
strum = { version = "0.24", features = ["derive"] }
parse-display = "0.6.0"

[dev-dependencies]
serde_json = "1.0.74"
futures = "0.3.19"
tokio = { version = "1.15.0", features = ["full"] }
rand = "0.8.4"

[build-dependencies]
r2r_common = { path = "r2r_common", version = "0.3.2" }
r2r_msg_gen = { path = "r2r_msg_gen", version = "0.3.3" }

[workspace]
