<?xml version="1.0"?>
<package format="3">
  <name>my_obstacle_avoidance</name>
  <version>0.0.1</version>
  <description>The obstacle avoidance package for ROS 2</description>
  <maintainer email="samuelsze@example.com">Samuel Sze</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>interfaces</depend> <!-- Dependency for the interface package containing the message definitions -->
  <!-- <exec_depend>rosidl_default_runtime</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
